[package]
name = "mrburns"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
unidecode= "0.3.0"
regex = "1.5.4"
urlencoding = "2.1.2"
open = "5.0.0"
anyhow = "1.0"
cliclack = "0.2.5"
serde_json = "1.0.107"
semver = "1.0.4"
chrono = "0.4"
