[package]
name = "mrburns"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
unidecode= "0.3.0"
regex = "1.11.1"
urlencoding = "2.1.3"
open = "5.3.1"
anyhow = "1.0.94"
cliclack = "0.3.5"
serde_json = "1.0.133"
semver = "1.0.4"
chrono = "0.4"

