[package]
name = "mrburns"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
unidecode= "0.3.0"
regex = "1.11.1"
urlencoding = "2.1.3"
open = "5.3.2"
anyhow = "1.0.97"
cliclack = "0.3.5"
serde_json = "1.0.140"
semver = "1.0.26"
chrono = "0.4.40"

